001-IntroToKubernetes/Student/Resources/Templates/template-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: bar
        image: namespace/baz
        ports:
        - containerPort: 80
